# portfolio

./: .dockerignore  .env.example  .gitignore  CNAME  Dockerfile  Jenkinsfile  LICENSE  LINKEDIN_API_RESEARCH.md  README.md  astro.config.mjs  blog.html  docker-compose.yml  home.html  html template.html  index.html  index.js  nginx.conf  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  projects.html  styles.css  tailwind.config.mjs  vite.config.ts
.githooks/: pre-commit
.github/: dependabot.yml
Webpage/: blog.html  home.html  portfolio.html  socials.html  style.css
api/: .dockerignore  .env.example  Cargo.toml  Dockerfile  openapi.json
api/src/: db.rs  main.rs
assets/bg01/: sl_031520_28970_32.eps
data/people-research/: 3blue1brown.json  arjan-codes.json  astrum.json  blacktail-studio.json  bright-side.json  caeleb-dressel.json  camman18.json  chess-vibes.json  cleo-abrams.json  coding-with-lewis.json  computerphile.json  computerscience-lessons.json  core-dumped.json  corridor-crew.json  dantdm.json  david-popovici.json  devops-toolbox.json  diy-perks.json  electroboom.json  film-booth.json  finzar.json  fireship.json  foil-arms-and-hog.json  four-eyes.json  game-makers-toolkit.json  gamelinked.json  gothamchess.json  hacksmith.json  hyperplexed.json  (+49 more)
docs/: README.md  SECRETS.md  astro-7-vite-plus-migration.md  privacy-first-analytics.md
jenkins/: Dockerfile  job-config.xml  plugins.txt  update-job.groovy
public/: cv.tex  llms.txt  robots.txt  site.webmanifest
scripts/: generate-people-graph.mjs  mermaid.config.json
src/: content.config.ts
(+83 files in other folders)
